--- a/viva 2.html
+++ b/viva 2.html
@@ -63,6 +63,78 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+          <table id="projects" border="0" width="100%"
+		cellpadding="0" cellspacing="0" bgcolor="#c2c0c3">
+		<tr>
+			<td>
+				<table border="0" cellpadding="15"
+					cellspacing="0" width="80%" align="center">
+					<tr>
+						<td height="180" align="center"
+							valign="middle" colspan="2">
+							<font face="Verdana" size="7"
+								color="black">
+								About
+							</font>
+							<hr color="black" width="90">
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+	</table>
+    <section class="page-section" id="contact" style="background-color:cornsilk ;">
+        <div class="container">
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Registration Form</h2>
+            
+    <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+        <div class="divider-custom-line"></div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-xl-7">
+            <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                <div class="form-floating mb-3">
+                    <input class="form-control" id="name" type="number" placeholder="Enter your name..." data-sb-validations="required" />
+                    <label for="name">Identification Number</label>
+                    <div class="invalid-feedback" data-sb-feedback="name:required">An ID is required.</div>
+                </div>
+                <div class="form-floating mb-3">
+                    <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
+                    <label for="name">Name</label>
+                    <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                </div>
+                <div class="form-floating mb-3">
+                    <input class="form-control" id="name" placeholder="Enter your name..." data-sb-validations="required" />
+                    <label for="name">Username</label>
+                    <div class="invalid-feedback" data-sb-feedback="name:required">An Username is required.</div>
+                </div>
+                <div class="form-floating mb-3">
+                    <input class="form-control" id="name" type="password" placeholder="Enter your name..." data-sb-validations="required" />
+                    <label for="name">Password</label>
+                    <div class="invalid-feedback" data-sb-feedback="name:required">A password is required.</div>
+                </div>
+                <div class="form-floating mb-3">
+                    <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
+                    <label for="email">Email address</label>
+                    <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
+                    <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                </div>
+                <div class="form-floating mb-3">
+                    <input class="form-control" id="phone" type="number" placeholder="(123) 456-7890" data-sb-validations="required" />
+                    <label for="phone">Phone number</label>
+                    <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                </div>
+                <div class="form-floating mb-3">
+                    <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
+                    <label for="message">Address</label>
+                    <div class="invalid-feedback" data-sb-feedback="message:required">An Address is required.</div>
+                </div>
+                <button class="btn btn-primary btn-xl " id="submitButton" type="submit">ADD</button>
+            </form>
+        </div>
+    </div>
     
 </body>
 </html>
