--- a/viva 2.html
+++ b/viva 2.html
@@ -6,25 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viva Project</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
+    <style>
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 5,
+          'wght' 1200,
+          'GRAD' 100,
+          'opsz' 50
+        }
+        </style>
     <div class="site">
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Person Management System</a>
+                <span class="material-symbols-outlined">
+                    logo_dev
+                    </span>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">View Member</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">Login</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Add Member</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#">Home</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#reg">Registration form</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,7 +75,7 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-          <table id="projects" border="0" width="100%"
+          <table  id="about" border="0" width="100%"
 		cellpadding="0" cellspacing="0" bgcolor="#c2c0c3">
 		<tr>
 			<td>
@@ -83,6 +95,7 @@
 			</td>
 		</tr>
 	</table>
+    <div id="reg">
     <section class="page-section" id="contact" style="background-color:cornsilk ;">
         <div class="container">
             <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Registration Form</h2>
@@ -131,9 +144,10 @@
                     <label for="message">Address</label>
                     <div class="invalid-feedback" data-sb-feedback="message:required">An Address is required.</div>
                 </div>
-                <button class="btn btn-primary btn-xl " id="submitButton" type="submit">ADD</button>
+                <button class="btn btn-primary btn-xl " id="submitButton" type="submit">SUBMIT</button>
             </form>
         </div>
+    </div>
     </div>
     
 </body>
